[FIX] web: no-repeat mime image
Without this patch, attachment thumbnails look ugly in the portal. Now they look good.

@Tecnativa TT26501

--- a/addons/web/static/src/scss/mimetypes.scss
+++ b/addons/web/static/src/scss/mimetypes.scss
@@ -4,6 +4,7 @@
     height: 38px;
     background-image: url('/web/static/src/img/mimetypes/unknown.svg');
     background-size: contain;
+    background-repeat: no-repeat;
 
     &[data-mimetype^='image'] {
         background-image: url('/web/static/src/img/mimetypes/image.svg');
